It's working!(kinda)

--- a/test_Marc.ipynb
+++ b/test_Marc.ipynb
@@ -56,15 +56,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -73,37 +64,10 @@
       "/home/drudis/anaconda3/envs/aqua/lib/python3.8/site-packages/qiskit/quantum_info/operators/symplectic/pauli.py:957: DeprecationWarning: `insert_paulis` is deprecated and will be removed no earlier than 3 months after the release date. For similar functionality use `Pauli.insert` instead.\n",
       "  return self.insert_paulis(None, paulis=paulis, pauli_labels=pauli_labels)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n"
-     ]
     }
    ],
    "source": [
-    "lattice_simplest = SquareLattice([3], bc='closed')\n",
+    "lattice_simplest = SquareLattice([4], bc='closed')\n",
     "\n",
     "S = 1.\n",
     "ms = 0.\n",
@@ -158,12 +122,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
-      "the tensor op is:\n",
-      "[[ 1.+0.j -1.+0.j]\n",
-      " [ 1.+0.j -1.+0.j]]\n",
       "GeneralMixedOperator\n",
       "MixedOperator\n",
       "fermionic: \n",
@@ -300,6 +258,44 @@
    "source": [
     "_,hopp_abs = terms_hamilton_hopp_mass_wilson(lattice_simplest,rep,params,output='abstract')\n",
     "print(hopp_abs.print_operators())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-6.221933404721247,\n",
+       " Quantum object: dims = [[16, 2, 2, 2, 2, 2, 2], [1, 1, 1, 1, 1, 1, 1]], shape = (1024, 1), type = ket\n",
+       " Qobj data =\n",
+       " [[0.]\n",
+       "  [0.]\n",
+       "  [0.]\n",
+       "  ...\n",
+       "  [0.]\n",
+       "  [0.]\n",
+       "  [0.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamilton_qt.groundstate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hamiltonian.to_file('/home/drudis/Documents/StoredOps/hamiltonian.txt')"
    ]
   }
  ],
